--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "el-input-number-only",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "element-ui el-input-number-only, don't show letters in input box",
   "main": "src/index.js",
   "scripts": {
@@ -12,8 +12,8 @@
     "url": "git@github.com:AsherWang/el-input-number-only.git"
   },
   "dependencies": {
-    "element-ui": "^2.0.0",
-    "vue": "^2.0.0"
+    "element-ui": ">=2.0.0",
+    "vue": ">=2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
